[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scripts/Monsters/Monster_LilBot.gd" type="Script" id=1]
[ext_resource path="res://Art/Shaders/MonsterMat.tres" type="Material" id=2]
[ext_resource path="res://Art/Monsters/LilBotShoot1.png" type="Texture" id=3]
[ext_resource path="res://Art/Monsters/LilBotShoot2.png" type="Texture" id=4]
[ext_resource path="res://Art/Monsters/LilBotShoot3.png" type="Texture" id=5]
[ext_resource path="res://Art/Monsters/LilBotShoot4.png" type="Texture" id=6]
[ext_resource path="res://Art/Monsters/LilBotShoot5.png" type="Texture" id=7]
[ext_resource path="res://Art/Monsters/LilBotShoot6.png" type="Texture" id=8]
[ext_resource path="res://Art/Monsters/LilBotShoot7.png" type="Texture" id=9]
[ext_resource path="res://Art/Monsters/LilBotShoot8.png" type="Texture" id=10]
[ext_resource path="res://Art/Monsters/LilBotShoot9.png" type="Texture" id=11]
[ext_resource path="res://Art/Monsters/LilBotShoot10.png" type="Texture" id=12]
[ext_resource path="res://Art/Monsters/LilBotShoot11.png" type="Texture" id=13]
[ext_resource path="res://Art/Monsters/LilBotShoot12.png" type="Texture" id=14]
[ext_resource path="res://Art/Monsters/LilBotShoot13.png" type="Texture" id=15]
[ext_resource path="res://Art/Monsters/LilBotShoot14.png" type="Texture" id=16]
[ext_resource path="res://Art/Monsters/LilBotShoot15.png" type="Texture" id=17]
[ext_resource path="res://Art/Monsters/LilBotShoot16.png" type="Texture" id=18]
[ext_resource path="res://Art/Effects/Lights/Flashlight.png" type="Texture" id=19]
[ext_resource path="res://Art/Monsters/LilBotWalkt1.png" type="Texture" id=20]
[ext_resource path="res://Art/Monsters/LilBotWalkt2.png" type="Texture" id=21]
[ext_resource path="res://Art/Monsters/LilBotWalkt3.png" type="Texture" id=22]
[ext_resource path="res://Art/Monsters/LilBotWalkt4.png" type="Texture" id=23]
[ext_resource path="res://Art/Monsters/LilBotWalkt5.png" type="Texture" id=24]
[ext_resource path="res://Art/Monsters/LilBotWalkt6.png" type="Texture" id=25]
[ext_resource path="res://Art/Monsters/LilBotWalkt7.png" type="Texture" id=26]
[ext_resource path="res://Art/Monsters/LilBotWalkt8.png" type="Texture" id=27]
[ext_resource path="res://Art/Monsters/LilBotWalkt9.png" type="Texture" id=28]
[ext_resource path="res://Art/Monsters/LilBotWalkt10.png" type="Texture" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
} ]

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/Flashlight.png-c6d4be21687759c48bce1a0ee9c5e135.stex"

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "go",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 4 )

[sub_resource type="SegmentShape2D" id=8]
b = Vector2( 0, 70 )

[node name="Monster_LilBot" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="PhysicsBody" type="KinematicBody2D" parent="."]

[node name="UpperBody" type="AnimatedSprite" parent="PhysicsBody"]
material = ExtResource( 2 )
frames = SubResource( 1 )
animation = "shoot"
frame = 15
playing = true

[node name="LeftEye" type="Light2D" parent="PhysicsBody/UpperBody"]
texture = ExtResource( 19 )
offset = Vector2( -2, 52 )
texture_scale = 0.2
color = Color( 1, 0, 0.819608, 1 )

[node name="RightEye" type="Light2D" parent="PhysicsBody/UpperBody"]
texture = SubResource( 2 )
offset = Vector2( 2, 52 )
texture_scale = 0.2
color = Color( 1, 0, 0.819608, 1 )

[node name="ShotHere" type="Node2D" parent="PhysicsBody/UpperBody"]
position = Vector2( -6, 7 )

[node name="LowerBody" type="AnimatedSprite" parent="PhysicsBody"]
frames = SubResource( 3 )
animation = "stop"
playing = true

[node name="Torso" type="CollisionShape2D" parent="PhysicsBody"]
visible = false
shape = SubResource( 4 )

[node name="Head" type="CollisionShape2D" parent="PhysicsBody"]
visible = false
shape = SubResource( 5 )

[node name="AttackArea" type="Area2D" parent="PhysicsBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicsBody/AttackArea"]
position = Vector2( -6, 0 )
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="PhysicsBody"]
one_shot = true

[node name="AttackAnim" type="Timer" parent="PhysicsBody"]
one_shot = true
